# neo

./: .gitignore  CMakeLists.txt  README.md  benchmark_api.patch  contributors.txt  fesits_avg  fesits_bj_corner  indent_neo.sh  laplace_meshworker.cc  result  run_time
include/: Benchmarks.h  BlockIntegrators.h  CompIntegrators.h  DDHandler.h  DDSmoother.h  Diffusion.h  Dofs.h  EquationData.h  FiniteElement.h  GMGPreconditioner.h  GMGPreconditioner.h.templates  GMGPreconditioner.templates.h  GenericLinearAlgebra.h  GlobalTimer.h  Integrators.h  LaplaceMeshworker.h  LaplaceOperator.h  LaplacePreconditionerMG.h  MFOperator.h  MFOperator.templates.h  MFPSCPreconditioner.h  MGMatrixSimpleMapped.h  MGOperator.h  MGTransferMF.h  MWOperator.h  MatrixIntegrator.h  MatrixIntegratorMG.h  Mesh.h  MfreeOperator.h  MyLaplace.h  NLPSCPreconditioner.h  NLPSCPreconditioner.templates.h  Neo.h  PSCIntegrators.h  PSCIntegrators_average.h  PSCPreconditioner.h  PSCPreconditioner.h.templates  PSCPreconditioner.templates.h  Preconditioner.h  RHS.h  (+8 more)
include/integrators_data/transport/angles/: D2P1K1.angles  D2P2K2.angles  D2P3K3.angles  D2P4K4.angles  D2P5K5.angles  D2P6K6.angles  D2P7K7.angles  D3P1K1.angles  D3P2K2.angles  D3P3K3.angles  D3P4K4.angles  README
include/local_integrators/: Diffusion.h  Elasticity.h  Laplace.h  Transport.h
results/q1_false_2d/: log1  log10  log11  log12  log13  log14  log15  log2  log3  log4  log5  log6  log7  log8  log9
results/q1_true_2d/: log1  log10  log11  log12  log13  log14  log15  log2  log3  log4  log5  log6  log7  log8  log9
results/q2_false_2d/: log1  log10  log11  log12  log13  log14  log2  log3  log4  log5  log6  log7  log8  log9
results/q2_false_3d/: log1  log2  log3  log4  log5  log6  log7
results/q2_true_2d/: log1  log10  log11  log12  log13  log14  log15  log2  log3  log4  log5  log6  log7  log8  log9
results/q2_true_3d/: log1  log2  log3  log4  log5  log6  log7
results/q3_false_2d/: log1  log10  log11  log12  log13  log2  log3  log4  log5  log6  log7  log8  log9
results/q3_false_3d/: log5  log6  log7
results/q3_true_2d/: log1  log10  log11  log12  log13  log14  log2  log3  log4  log5  log6  log7  log8  log9
results/q4_false_2d/: log1  log10  log11  log12  log13  log2  log3  log4  log5  log6  log7  log8  log9
results/q4_true_2d/: log1  log10  log11  log12  log13  log2  log3  log4  log5  log6  log7  log8  log9
source/: Benchmarks.cc  BlockIntegrators.cc  CompIntegrators.cc  DDHandler.cc  DDHandler.inst  DDSmoother.cc  DDSmoother.inst  Dofs.cc  EquationData.cc  FiniteElement.cc  GMGPreconditioner.cc  GMGPreconditioner.inst  GlobalTimer.cc  Integrators.cc  Integrators.inst  LaplaceMeshworker.cc  LaplaceOperator.cc  LaplaceOperator.inst  LaplacePreconditionerMG.cc  MFOperator.cc  MFOperator.inst  MFPSCPreconditioner.cc  MFPSCPreconditioner.inst  MGOperator.cc  MGOperator.inst  MWOperator.cc  MWOperator.inst  MatrixIntegrator.cc  MatrixIntegratorMG.cc  Mesh.cc  MfreeOperator.cc  MfreeOperator.inst  MyLaplace.cc  MyLaplace.inst  Neo.cc  PSCIntegrators.cc  PSCIntegrators_average.cc  PSCPreconditioner.cc  PSCPreconditioner.inst  Preconditioner.cc  (+4 more)
